sgroups.tf
/* default security group */
resource "aws_security_group" "default" {
  name = "default-vpc"
  description = "Default security group that allows inbound and outbound traffic from all instances in the VPC"
  vpc_id = "${aws_vpc.default.id}"
  
  ingress {
    from_port   = "0"
    to_port     = "0"
    protocol    = "-1"
    self        = true
  }
  
  /* Allow all outbound traffic to the internet */
  /* egress { */
  /*   from_port   = "0" */
  /*   to_port     = "0" */
  /*   protocol    = "-1" */
  /*   cidr_blocks = ["0.0.0.0/0"] */
  /* } */

  tags { Name = "default-vpc" }
}


/* Security group for the nat server */
resource "aws_security_group" "nat" {
  name = "nat"
  description = "Security group for nat instances that allows SSH and VPN traffic from internet"
  vpc_id = "${aws_vpc.default.id}"
  
  ingress {
    from_port = 22
    to_port  = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  ingress {
    from_port = 1194
    to_port  = 1194
    protocol = "udp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  tags { Name = "nat" }
}

/* Security group for the web */
resource "aws_security_group" "web" {
  name = "web"
  description = "Security group for web that allows web traffic from internet"
  vpc_id = "${aws_vpc.default.id}"
  
  ingress {
    from_port = 80
    to_port  = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  ingress {
    from_port = 443
    to_port  = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  tags { Name = "web" }
}
